# QuestLog

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/gui/: app_setup.rs  configure_fonts.rs  mod.rs  panel_bottom.rs  panel_central.rs  panel_top.rs  render_content.rs  render_epic_cards.rs  render_quests.rs
src/model/: epic.rs  mod.rs  quest.rs
src/test/: dummy_data.rs  mod.rs
