[package]
name = "quest-log"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
eframe = { version = "0.31.1", features = ["persistence"] }
egui = "0.31.1"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde"
]
